# drawboy

./: Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.github/: install-arm-linkers.yml
src/: app.rs  ewma.rs  houndstooth.wif  main.rs
src/app/: pedal.rs
