[package]
name = "drawboy"
version = "0.1.0"
edition = "2021"

[features]
rpi = ["rppal"]

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui_extras = "0.29.1"
env_logger = "0.11.5"
rfd = { version = "0.15.0", features = [] }
rppal = { version = "0.19.0", optional = true }
wif = { version = "0.1.0", path = "../wif" }
