[package]
name = "drawboy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mdsherry/drawboy"

[features]
rpi = ["rppal"]

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui_extras = "0.29.1"
env_logger = "0.11.5"
rfd = { version = "0.15.0", features = [] }
rppal = { version = "0.19.0", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
wif = { version = "0.1.0", git = "http://github.com/mdsherry/wif.git" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
